fix: cards spacing

--- a/src/components/sections/LateralScroll/LateralScroll.module.css
+++ b/src/components/sections/LateralScroll/LateralScroll.module.css
@@ -50,8 +50,11 @@
     align-items: center;
     gap: 150px;
 
-    padding-left: calc((100vw - 30vw) / 2);
-    padding-right: calc((100vw - 30vw) / 2);
+    /* Aumenta este valor para empujar las cards a la derecha */
+    padding-left: 60vw;
+
+    /* Mantén un padding a la derecha similar o menor para el final del scroll */
+    padding-right: 20vw;
 
     height: 100%;
     will-change: transform;
